<resources>
    <string name="app_name">FakeNeptun</string>
    <string name="name">Név</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="user_name">Felhasználónév</string>
    <string name="email_address">E-mail cím</string>
    <string name="password_again">Jelszó megerősítése</string>
    <string name="cancel">Mégse</string>
    <string name="phone_number">Telefonszám</string>
    <string name="address">Cím</string>
    <string name="account_type">Fiók típusa</string>
    <string name="customer">Tanár</string>
    <string name="seller">Diák</string>
    <string name="product_description">Termék leírása.</string>
    <string name="title_placeholder">Title</string>
    <string name="item_placeholder">Leírás</string>
    <string name="item_info_placeholder">Here is some news</string>
    <string name="subtitle_detail_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices congue rutrum. Phasellus elementum ipsum ac convallis aliquam. Suspendisse eleifend eros a enim faucibus mollis. Nunc placerat, est vitae vestibulum blandit, dolor diam fringilla tellus, eu euismod mauris neque at neque.</string>
    <string name="join_course">Join Course</string>
    <string name="list_teachers">List Teachers</string>
    <string name="update">UpRate +0.2</string>
    <string name="delete">Delete</string>
    <string name="downrate_0_2">DownRate -0.2</string>
    <string name="_1_di_k">+1 Diák</string>
    <string name="p1_di_k">-1 Diák</string>
    <string name="coursedesc">Tárgy leírás</string>
    <string name="studNum">Diákok száma</string>
    <string name="courseName">Tárgy neve</string>

    <string-array name="phone_labels">
        <item>Otthon</item>
        <item>Munkahely</item>
        <item>Mobil</item>
        <item>Egyéb</item>
    </string-array>

    <string-array name="teacher_names">
        <item>Béla</item>
        <item>Béla1</item>
        <item>Béla2</item>
        <item>Béla3</item>
        <item>Béla4</item>
        <item>Béla5</item>
        <item>Béla6</item>
        <item>Béla7</item>
        <item>Béla8</item>
        <item>Béla9</item>
    </string-array>

    <string-array name="teacher_desc">
        <item>Nem</item>
        <item>Történik</item>
        <item>Semmi</item>
        <item>Hasznos</item>
        <item>Az</item>
        <item>Egyetemen</item>
        <item>Csak</item>
        <item>Az</item>
        <item>Ivás</item>
        <item>A kalkulus könnyű tárgy</item>
    </string-array>

    <array name="teacher_rates">
        <item>3.5</item>
        <item>5</item>
        <item>4</item>
        <item>1.5</item>
        <item>5</item>
        <item>3</item>
        <item>4.5</item>
        <item>4</item>
        <item>5</item>
        <item>2.5</item>
    </array>

    <array name="teacher_images">
        <item>@drawable/teacher</item>
        <item>@drawable/teacher</item>
        <item>@drawable/teacher</item>
        <item>@drawable/teacher</item>
        <item>@drawable/teacher</item>
        <item>@drawable/teacher</item>
        <item>@drawable/teacher</item>
        <item>@drawable/teacher</item>
        <item>@drawable/teacher</item>
        <item>@drawable/teacher</item>
    </array>

    <array name="teacher_organization">
        <item>TTIK</item>
        <item>BTK</item>
        <item>ÁJTK</item>
        <item>GTK</item>
        <item>TTIK</item>
        <item>GTK</item>
        <item>TTIK</item>
        <item>GTK</item>
        <item>TTIK</item>
        <item>ÁJTK</item>
    </array>
    <array name="course_organization">
        <item>TTIK</item>
        <item>TTIK</item>
        <item>TTIK</item>
        <item>TTIK</item>
        <item>TTIK</item>
        <item>TTIK</item>
        <item>TTIK</item>
        <item>TTIK</item>
        <item>TTIK</item>
        <item>TTIK</item>
    </array>
    <array name="courseTitle">
        <item>Op.kut.</item>
        <item>ProgII.</item>
        <item>Fonya</item>
        <item>ÁFonya</item>
        <item>Kalkulus</item>
        <item>Logika</item>
        <item>Bonya</item>
        <item>Köszi</item>
        <item>Sztocha</item>
        <item>Alkstat</item>
    </array>
    <array name="course_desc">
        <item>Jó</item>
        <item>Úgy is bukta</item>
        <item>Easy</item>
        <item>Moderate</item>
        <item>Semmi jó</item>
        <item>Egyszer meglesz</item>
        <item>SOSe lesz meg</item>
        <item>Bajusz</item>
        <item>Matek</item>
        <item>Még matek</item>
    </array>
    <array name="studentNumber">
        <item>10</item>
        <item>21</item>
        <item>100</item>
        <item>13</item>
        <item>133</item>
        <item>333</item>
        <item>666</item>
        <item>696</item>
        <item>42</item>
        <item>66</item>
    </array>
</resources>