<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00BCD4">
        <TextView
            android:id="@+id/courseTitle"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/courseName"
            android:textColor="?android:textColorSecondary" />

        <TextView
            android:id="@+id/studentsNumber"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/courseTitle"
            android:padding="8dp"
            android:text="@string/studNum" />

        <TextView
            android:id="@+id/subTitle"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/studentsNumber"
            android:padding="8dp"
            android:text="@string/coursedesc" />

        <TextView
            android:id="@+id/org"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/subTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:textColor="@color/red" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/org"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/subStudent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/p1_di_k" />


            <Button
                android:id="@+id/add_student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/_1_di_k" />

            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textAlignment="center"
                app:icon="@android:drawable/ic_delete" />
        </LinearLayout>


    </RelativeLayout>
</androidx.cardview.widget.CardView>